B-F Sandbox Full-Backup/src/objects/Test_Case_Step__c.object
<CustomObject>
    <description>A Test Case Step is the incremental actions that, when joined in sequence, make up a Test Case.</description>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Description__c</fullName>
        <label>Step Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Case Steps</relationshipLabel>
        <relationshipName>Test_Case_Steps_old</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case Step</label>
    <nameField>
        <displayFormat>TCS-{0000}</displayFormat>
        <label>Test Case Steps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>